# JavaWork

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  (+1 more)
gradle/wrapper/: gradle-wrapper.properties
module_practice_anr/: README.md  README2.md  build.gradle
module_practice_anr/src/main/: AndroidManifest.xml
module_practice_aop/: build.gradle
module_practice_aop/src/main/: AndroidManifest.xml
module_practice_aop_annotation/: build.gradle
module_practice_aop_annotation/src/main/: AndroidManifest.xml
module_practice_common/: build.gradle
module_practice_common/src/main/: AndroidManifest.xml
module_practice_jni/: build.gradle
module_practice_jni/extra/: CMakeLists.txt  CMakeProject4_Jni_first.cpp
module_practice_jni/src/main/: AndroidManifest.xml
module_practice_memory_leak/: build.gradle
module_practice_memory_leak/src/main/: AndroidManifest.xml
module_practice_ndk/: build.gradle
module_practice_ndk/src/main/: AndroidManifest.xml
module_practice_ndk/src/main/cpp/: CMakeLists.txt  native-lib.cpp
module_practice_polymorphism/: build.gradle
module_practice_polymorphism/src/main/: AndroidManifest.xml
module_practice_reflect/: build.gradle
module_practice_reflect/src/main/: AndroidManifest.xml
module_practice_reflection/: build.gradle
module_practice_reflection/src/main/: AndroidManifest.xml
module_practice_synchronized/: build.gradle
module_practice_synchronized/src/main/: AndroidManifest.xml
(+150 files in other folders)
